# libjpeg-turbo

./: CMakeLists.txt  cjpeg.c  common.h  djpeg.c  jccolor.c  jcdctmgr.c  jchuff.c  jcsample.c  jdcoefct.c  jdcolor.c  jdhuff.c  jdmainct.c  jdsample.c  jfdctint.c  jidctint.c  jpegint.h  jpeglib.h
esp32/components/jpeg_turbo_codec/: CMakeLists.txt
esp32/components/jpeg_turbo_codec/include/: jpeg_kernels.h
esp32/components/jpeg_turbo_codec/src/: idct.c  jpeg_turbo_dec.c  jpeg_turbo_enc.c
esp32/components/libjpeg_turbo/: CMakeLists.txt
esp32/examples/jpeg_decoder/: sdkconfig  sdkconfig.old
esp32/examples/jpeg_decoder/main/: CMakeLists.txt  example_jpeg_decoder.c
esp32/examples/jpeg_encoder/: sdkconfig  sdkconfig.old
esp32/examples/jpeg_encoder/main/: CMakeLists.txt  example_jpeg_encoder.c
esp32/test_example/: CMakeLists.txt  Makefile  README.md
esp32/test_example/main/: CMakeLists.txt  jpeg_test.c
esp32_jpeg_dec/: README.md
esp32_jpeg_dec/main/: CMakeLists.txt  decoder.h  decoder_def.c  jpeg_decoder.c
esp32_jpeg_enc/: README.md
esp32_jpeg_enc/components/enc_dec_files/: decoder_def.c
esp32_jpeg_enc/main/: CMakeLists.txt  encoder.h  encoder_def.c  jpeg_encoder.c
esp32_jpeg_test/: README.md
esp32_jpeg_test/components/enc_dec_files/: CMakeLists.txt  encoder_def.c
esp32_jpeg_test/main/: CMakeLists.txt  decoder.h  decoder_def.c  jpeg_test.c
simd/: jsimd.h
simd/esp32/: jccolext_esp32.c  jdcolext_esp32.c  jsimd.c  jsimd.h
